fix(desktop): add white-space nowrap on the header actions

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -89,6 +89,7 @@
           gap: 0.5rem;
 
           transition: opacity 0.3s;
+          white-space: nowrap;
 
           &:hover {
             opacity: 0.7;
